--- a/src/components/Page/Page.less
+++ b/src/components/Page/Page.less
@@ -13,7 +13,7 @@
   padding-top: 16px;
   padding-bottom: 16px;
   margin-top: 0;
-  background-color: rgba(255, 0, 0, 0.75);
+  background-color: rgba(150, 150, 150, 0.75);
 }
 
 .link-container {
@@ -21,9 +21,11 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;  
   color: var(--text-color);
-  padding-right: 16px;
+  padding-right: 32px;
+}
+.loginlogout{
+  width: 75px;
 }
 
 .split {
@@ -48,7 +50,6 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 0, 0.75)
 }
 
 
@@ -63,6 +64,6 @@
   padding: 8px 0px;
   min-height: 48px;
   width: 100%;
-  background-color: rgba(0, 128, 0, 0.75);
+  background-color: rgba(150, 150, 150, 0.75);
   margin-bottom: 0;
 }
